--- a/preptrack/backend/tsconfig.json
+++ b/preptrack/backend/tsconfig.json
@@ -15,6 +15,8 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
